fix(a11y): file upload button focus visible

--- a/packages/forms-web-app/src/sass/components/ui/file-upload.scss
+++ b/packages/forms-web-app/src/sass/components/ui/file-upload.scss
@@ -1,6 +1,6 @@
-.document-file-upload__label {
+.ui-file-upload__input {
 	&:focus {
-		+ .govuk-button {
+		+ .ui-file-upload__label {
 			border-color: #fd0;
 			color: #0b0c0c;
 			background-color: #fd0;
